tests/transpiler/x/zig/list_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_assign.zig:6:9: error: no field or member function named 'put' in '[2]i64'
    nums.put(1, 3) catch unreachable;
    ~~~~^~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
