tests/transpiler/x/zig/list_assign.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:57 +0000
const std = @import("std");

pub fn main() void {
    var nums = [_]i64{1, 2};
    nums.put(1, 3) catch unreachable;
    try std.io.getStdOut().writer().print("{c}\n", .{nums[1]});
}
